--- a/css/flaticon.css
+++ b/css/flaticon.css
@@ -1,6 +1,6 @@
 	/*
   	Flaticon icon font: Flaticon
-  	Creation date: 24/01/2020 06:52
+  	Creation date: 04/01/2019 13:45
   	*/
 
 
@@ -36,7 +36,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.flaticon-trees:before { content: "\f100"; }
-.flaticon-fence:before { content: "\f101"; }
-.flaticon-lawn-mower:before { content: "\f102"; }
-.flaticon-natural-resources:before { content: "\f103"; }
+.flaticon-ideas:before { content: "\f100"; }
+.flaticon-flasks:before { content: "\f101"; }
+.flaticon-analysis:before { content: "\f102"; }
+.flaticon-ux-design:before { content: "\f103"; }
+.flaticon-web-design:before { content: "\f104"; }
+.flaticon-idea:before { content: "\f105"; }
+.flaticon-innovation:before { content: "\f106"; }
